@@ -1,6 +1,7 @@
 == 2.8.4 ==
 Release date: 
 * Enhancement: Price Menu - Added 1 new style
+* Enhancement: Image Accordion - Added option to apply link on button or item container
 * Enhancement: Info Grid & Carousel - Added Icon Position option
 * Enhancement: Info Table - Added Icon Position option
 * Fixed: Logo Grid - Minor CSS glitch when link is added to logo
